<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_screen_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/day"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weekWeatherRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureInfoTextView" />

    <ImageView
        android:id="@+id/weatherStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cloudy"
        app:layout_constraintBottom_toTopOf="@id/center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/settingsBottom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/no_color"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/settings_button"
        android:tint="@color/dark_grey"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/city"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/degrees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/degrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/plus_16"
        android:textSize="@dimen/degrees"
        app:layout_constraintBottom_toBottomOf="@+id/center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cloudyInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/little_cloudy"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degrees" />

    <TextView
        android:id="@+id/feelsLikeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/feels_like_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudyInfoTextView" />

    <TextView
        android:id="@+id/pressureInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressureInfo"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelsLikeTextView" />

    <ImageButton
        android:id="@+id/locationButton"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginBottom="30dp"
        android:background="@color/no_color"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/location_button"
        android:tint="@color/dark_grey"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/readMoreButton"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginBottom="25dp"
        android:background="@color/no_color"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/book"
        android:tint="@color/dark_grey"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/currTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currTime"
        app:layout_constraintBottom_toBottomOf="@+id/degrees"
        app:layout_constraintStart_toStartOf="@+id/locationButton"
        app:layout_constraintTop_toTopOf="@+id/degrees" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windInfo"
        app:layout_constraintBottom_toBottomOf="@+id/degrees"
        app:layout_constraintEnd_toEndOf="@+id/settingsBottom"
        app:layout_constraintTop_toTopOf="@+id/degrees" />

</androidx.constraintlayout.widget.ConstraintLayout>